fix - Fixing a promo, about, skills, statistics styles on mobile version

--- a/src/components/heading/style.css
+++ b/src/components/heading/style.css
@@ -56,6 +56,7 @@
 
 @media only screen and (max-width: 37.5em) {
   .heading-sec__main {
+    margin-bottom: 2rem;
     font-size: 43px;
     line-height: 49px;
   }
