--- a/src/sections/about/style.css
+++ b/src/sections/about/style.css
@@ -70,16 +70,15 @@
     margin-bottom: 5rem;
   }
 
-  .about__greeting {
-    font-size: 2rem;
-  }
-}
-
-@media only screen and (max-width: 56.25em) {
   .about__wrapper {
     flex-direction: column;
     align-items: center;
-    gap: 6rem;
+    gap: 4rem;
+  }
+
+  .about__greeting {
+    font-size: 24px;
+    line-height: 30px;
   }
 
   .about__left {
